# BehavValCadmium

./: .gitignore  CMakeLists.txt  Exp1.sh
main/: CMakeLists.txt  main.cpp
main/include/: Counter.hpp  Counter_Top.hpp  axiom_logger.hpp
main/input_data/: direction_in.txt  increment_in.txt
simulation_results/: counter_test.csv
